--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
 header {
     background-color: lightcoral;
     height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
 }
 
 .main-container {
@@ -19,18 +23,35 @@ header {
     align-items: center;
 }
 
-.row{
-    width: 600px;
+.grid{
+    max-width: 500px;
+    max-height: 500px;
+    width: 80vw;
+    height: 80vw;
     display: flex;
     flex-wrap: wrap;
-    border: 1px solid black;
-
 }
 
+
+/* |BOX LEVELS LAYOUT| */
 .box {
     border: 1px solid black;
-    width: calc(100% / 9 - 1px);
-    height: calc(100% / 9 );
-    aspect-ratio: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
+}
+
+.box.hard {
+    width: calc(100% / 10);
+    height: calc(100% / 10); 
+}
+
+.box.medium {
+    width: calc(100% / 9);
+    height: calc(100% / 9); 
+} 
+.box.easy {
+    width: calc(100% / 7);
+    height: calc(100% / 7); 
 }
